--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,4 +6,9 @@
         %ul.nav.pull-right
           %li= link_to "Home", root_path
           %li= link_to "Help", help_path
-          %li= link_to "Sign in", '#'
+          - if current_user
+            %li= link_to current_user.email, current_user
+            %li= link_to "Log out", logout_path
+          - else
+            %li= link_to "Sign up", signup_path
+            %li= link_to "Log in", login_path
