--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,9 @@
   %body
     = render 'layouts/navigation'
     .container
+      - flash.each do |key, value|
+        %div{:class => "alert alert-#{key}"}
+          = value
       = yield
       = render 'layouts/footer'
+      = debug(params) if Rails.env.development?
