--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,5 +1,8 @@
 .center.hero-unit
+
   %h1 Welcome to the Hotel App
   %h2 This is the home page!
-    
-  = link_to "Sign up now!", '#', class: "btn btn-large btn-primary"
+  - if current_user
+    %h3 You're signed in as current_user.email.
+  - else
+    = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
