--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -4,5 +4,6 @@
   %h2 This is the home page!
   - if current_user
     %h3 You're signed in as #{current_user.email}.
+    = link_to "Customers", customers_path
   - else
     = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
