--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -15,3 +15,4 @@
       = f.text_field :company 
 
       = f.submit "Save changes", class: "btn btn-large btn-primary"
+      = link_to "Back", customers_path, class: "btn btn-large pull-right"
