room types added

--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -3,3 +3,5 @@
   %li= full_name(@customer)
   %li= @customer.number
   %li= @customer.company
+
+= link_to "Back", customers_path, class: "btn btn-large"
