--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -7,6 +7,6 @@
   - @customers.each do |customer| 
     %li
       = link_to "#{customer.last_name}, #{customer.first_name}", customer 
-      = link_to "Delete", customer, method: :delete, data: { confirm: "You sure?" }
-      = link_to "Edit", edit_customer_path(customer)
+      = link_to "Delete", customer, method: :delete, data: { confirm: "You sure?" }, class: "btn btn-small"
+      = link_to "Edit", edit_customer_path(customer), class: "btn btn-small"
 / = will_paginate 
