--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,3 +1,4 @@
+- provide(:title, "Creating Customer") 
 %h1 New Customer
 
 .row
@@ -14,3 +15,4 @@
       = f.text_field :company 
 
       = f.submit "Create customer!", class: "btn btn-large btn-primary"
+      = link_to "Back", customers_path, class: "btn btn-large pull-right"
