habtm rooms/room_types

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -141,3 +141,8 @@ input {
   @extend .control-group;
   @extend .error;
  }
+
+ /* custom shit */
+ #room_room_type_ids{
+  padding: 0 0 0 2px;
+ }
