--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,5 +7,6 @@
     %ul
       %li= link_to "Customers", customers_path
       %li= link_to "Room Types", room_types_path
+      %li= link_to "Rooms", rooms_path
   - else
     = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
