companies are separate model now

--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -12,7 +12,7 @@
       = f.label :number 
       = f.text_field :number 
       = f.label :company 
-      = f.text_field :company 
+      = f.collection_select(:company_ids, Company.all, :id, :name)
 
       = f.submit "Save changes", class: "btn btn-large btn-primary"
       = link_to "Back", customers_path, class: "btn btn-large pull-right"
