--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -8,5 +8,6 @@
       %li= link_to "Customers", customers_path
       %li= link_to "Room Types", room_types_path
       %li= link_to "Rooms", rooms_path
+      %li= link_to "Companies", companies_path
   - else
     = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
