--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -11,8 +11,8 @@
       = f.text_field :last_name 
       = f.label :number 
       = f.text_field :number 
-      = f.label :company 
-      = f.text_field :company 
+      = f.label :company
+      = f.collection_select(:company_ids, Company.all, :id, :name)
 
       = f.submit "Create customer!", class: "btn btn-large btn-primary"
       = link_to "Back", customers_path, class: "btn btn-large pull-right"
