reservations kinda working

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -143,6 +143,6 @@ input {
  }
 
  /* custom shit */
- #room_room_type_ids{
+ input, textarea, select, .uneditable-input{
   padding: 0 0 0 2px;
  }
