--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "Editing #{full_name(@customer)}") 
+- provide(:title, "Editing #{@customer.full_name}") 
 %h1 Edit Customer
 
 .row
