--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -13,4 +13,5 @@
   = calendar @date do |date| 
     = date.day 
     - if @all_reservations.include?(date) 
-      = link_to "Booked", @res_by_date[date]
+      - @res_by_date[date.to_s].each do |res|
+        .reservation_link= link_to "#{res.customers.first.full_name}", res
