back button changes, daily view working

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -201,3 +201,15 @@ input {
   padding-left: 20px;
 }
 
+/* Daily View */
+#room-list {
+
+
+  .label{
+    a{
+      text-decoration: none;
+      color: white;
+    }
+  }
+}
+
