--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -11,4 +11,4 @@
       = f.text_field :number  
 
       = f.submit "Update company!", class: "btn btn-large btn-primary"
-      = link_to "Back", companies_path, class: "btn btn-large pull-right"
+      = link_to "Back", :back, class: "btn btn-large pull-right"
