--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -3,4 +3,4 @@
   %li= @company.name
   %li= @company.number
 
-= link_to "Back", companies_path, class: "btn btn-large"
+= link_to "Back", :back, class: "btn btn-large"
