--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -15,4 +15,4 @@
       = f.collection_select(:company_ids, Company.all, :id, :name)
 
       = f.submit "Save changes", class: "btn btn-large btn-primary"
-      = link_to "Back", customers_path, class: "btn btn-large pull-right"
+      = link_to "Back", :back, class: "btn btn-large pull-right"
