--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -3,4 +3,4 @@
   %li= full_name(@customer)
   %li= @customer.number
 
-= link_to "Back", customers_path, class: "btn btn-large"
+= link_to "Back", :back, class: "btn btn-large"
