--- a/app/views/reservations/show.html.haml
+++ b/app/views/reservations/show.html.haml
@@ -8,4 +8,4 @@
     %li= room.name
   %li= @reservation.companies.first.name
 
-= link_to "Back", reservations_path, class: "btn btn-large"
+= link_to "Back", :back, class: "btn btn-large"
