--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -3,7 +3,7 @@
   %li= @room.name
   %li= @room.room_types.first.name
 
-= link_to "Back", rooms_path, class: "btn btn-large"
+= link_to "Back", :back, class: "btn btn-large"
 
 #reservations
   %h2#month
