--- a/app/views/static_pages/daily.html.haml
+++ b/app/views/static_pages/daily.html.haml
@@ -2,22 +2,30 @@
 %h1 Daily view of all rooms
 
 .row
-  .span6.offset3
+  .span8.offset2
     %table.table.table-striped.table-bordered#room-list
       %thead
         %tr
           %th Room
           %th Status
+          %th Customer
+          %th Company
       %tbody
       - @rooms.each do |room|
         %tr
-          %td= room.name
+          %td= link_to room.name, room
           %td
-            - if !room.check_in_today.nil?
-              .check-in= link_to "#{room.check_in_today.customers.first.full_name} checks in today.", room.check_in_today
-            - elsif !room.check_out_today.nil?
-              .check-out= link_to "#{room.check_out_today.customers.first.full_name} checks out today.", room.check_out_today
-            - elsif !room.booked.nil?
-              .booked= link_to "#{room.booked.customers.first.full_name} is in the room today.", room.booked
+            - if room.check_in_today
+              %span.label.label-success.check-in= link_to "Check-in", room.check_in_today
+            - elsif room.check_out_today
+              %span.label.label-warning.check-out= link_to "Check-out", room.check_out_today
+            - elsif room.booked
+              %span.label.label-info.booked= link_to "Booked", room.booked
             - else
-              .free Room is empty.
+              %span.label.free Free
+          %td
+            - if room.booked
+              = link_to room.booked.customers.first.initial_name, room.booked.customers.first
+          %td 
+            - if room.booked && !room.booked.companies.empty?
+              = link_to room.booked.companies.first.name, room.booked.companies.first
