--- a/app/views/reservations/new.html.haml
+++ b/app/views/reservations/new.html.haml
@@ -10,11 +10,11 @@
       = f.label :end_date
       = f.text_field :end_date
       = f.label :company
-      = f.collection_select(:company_ids, Company.all, :id, :name)
+      = f.collection_select(:company_ids, Company.all, :id, :name, {include_blank: true})
       = f.label :customer
       = f.collection_select(:customer_ids, Customer.all, :id, :first_name)
       = f.label :room
       = f.collection_select(:room_ids, Room.all, :id, :name)
 
       = f.submit "Create reservation!", class: "btn btn-large btn-primary"
-      = link_to "Back", reservations_path, class: "btn btn-large pull-right"
+      = link_to "Back", :back, class: "btn btn-large pull-right"
