--- a/app/views/room_types/edit.html.haml
+++ b/app/views/room_types/edit.html.haml
@@ -15,3 +15,4 @@
         = f.text_field :price, style:"width: 432px"
 
       = f.submit "Update Room Type!", class: "btn btn-large btn-primary"
+      = link_to "Back", :back, class: "btn btn-large pull-right"
