--- a/app/views/room_types/new.html.haml
+++ b/app/views/room_types/new.html.haml
@@ -14,4 +14,4 @@
         = f.text_field :price, style:"width: 432px"
 
       = f.submit "Create Room Type!", class: "btn btn-large btn-primary"
-      = link_to "Back", room_types_path, class: "btn btn-large pull-right"
+      = link_to "Back", :back, class: "btn btn-large pull-right"
