--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -8,3 +8,4 @@
     %li= link_to "Rooms", rooms_path
     %li= link_to "Companies", companies_path
     %li= link_to "Reservations", reservations_path
+    %li= link_to "Daily", daily_path
