--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -1,18 +1,35 @@
-- provide(:title, "Editing #{@customer.full_name}") 
-%h1 Edit Customer
-
+- provide(:title, "Editing #{@customer.initial_name}") 
 .row
   .span6.offset3
     = form_for @customer do |f| 
       = render 'shared/error_messages', object: f.object
+      %legend Edit Customer Info
       = f.label :first_name 
       = f.text_field :first_name 
       = f.label :last_name 
       = f.text_field :last_name 
-      = f.label :number 
+      = f.label :number, 'DNI/Passport Number'
       = f.text_field :number 
-      = f.label :company 
-      = f.collection_select(:company_ids, Company.all, :id, :name)
+      = f.label :address_line_1, 'Address'
+      = f.text_field :address_line_1
+      = f.label :address_line_2, 'City'
+      = f.text_field :address_line_2
+      = f.label :address_line_3, 'Country'
+      = f.country_select :address_line_3
+      %legend.with-small
+        Edit Customer Company
+        %br
+        %small Set to blank to remove company or if creating a new company
+      = f.label :company, "Current Company"
+      = f.collection_select(:company_ids, Company.all, :id, :name, {include_blank: true})
+      %legend.with-small
+        Change to New Company
+        %br
+        %small Fill in to set customer's company to a new company
+      = label_tag :company_name, "New Company Name"
+      = text_field_tag :company_name
+      = label_tag :company_number, "New Company Number"
+      = text_field_tag :company_number
 
-      = f.submit "Save changes", class: "btn btn-large btn-primary"
-      = link_to "Back", :back, class: "btn btn-large pull-right"
+      = f.submit "Save changes!", class: "btn btn-large btn-primary"
+      = link_to "Back", customers_path, class: "btn btn-large pull-right"
