--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,10 +1,11 @@
 - provide(:title, "Creating Customer") 
-%h1 New Customer
+%h2 New Customer
 
 .row
   .span6.offset3
     = form_for @customer do |f| 
       = render 'shared/error_messages', object: f.object
+      %legend Customer Info
       = f.label :first_name 
       = f.text_field :first_name 
       = f.label :last_name 
@@ -16,12 +17,18 @@
       = f.label :address_line_2, 'City'
       = f.text_field :address_line_2
       = f.label :address_line_3, 'Country'
-      = f.country_select :address_line_3
-      = f.label :company
-      = f.collection_select(:company_ids, Company.all, :id, :name, {include_blank: true})
-      = label_tag :company_name, "Company Name"
+      = f.country_select :address_line_3, {}, {class: "chzn-select"}
+      %legend 
+        Existing Company
+        %small.pull-right Leave blank if creating a new company
+      = f.label :company, "Existing Company"
+      = f.collection_select :company_ids, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
+      %legend 
+        New Company
+        %small.pull-right Fill in to create a new company
+      = label_tag :company_name, "New Company Name"
       = text_field_tag :company_name
-      = label_tag :company_number, "Company Number"
+      = label_tag :company_number, "New Company Number"
       = text_field_tag :company_number
 
       = f.submit "Create customer!", class: "btn btn-large btn-primary"
