--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -5,4 +5,4 @@
   - unless @customer.companies.first.nil?
     %li= link_to @customer.companies.first.name, @customer.companies.first
 
-= link_to "Back", :back, class: "btn btn-large"
+= link_to "Back", customers_path, class: "btn btn-large"
