--- a/app/views/reservations/index.html.haml
+++ b/app/views/reservations/index.html.haml
@@ -16,9 +16,7 @@
     = link_to "<", date: @date - 1.week 
     = @date.strftime("%B %Y") 
     = link_to ">", date: @date + 1.week
-  = long_calendar @date do |date| 
-    = date.day 
-    / - if @reservations_by_date[date] 
-    /   %ul
-    /     - @reservations_by_date[date].each do |reservation| 
-    /       %li= link_to reservation.full_name, reservation
+  #long-calendar
+    = long_calendar(@date,@rooms) do |date| 
+      = date.day 
+   
