--- a/app/assets/stylesheets/long-calendar.css.scss
+++ b/app/assets/stylesheets/long-calendar.css.scss
@@ -22,13 +22,37 @@
     color: #777;
     height: 20px;
     // vertical-align: top;
+    overflow:hidden;
     font-size: 12px;
     width: 6.25%;
   }
 
+  .no-padding-left{
+    padding: 0;
+    // text-align: left;
+  }
+  .no-padding-right{
+    padding: 0;
+    text-align: right;
+  }
+  .no-padding-both{
+    padding: 0;
+  }
+
   .no-padding{
-      padding: 0;
-      text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin: 0;
+  }
+
+  .start-res-both{
+    padding-left: 14px;
+  }
+
+  .end-res-both{
+    padding-right: 14px;
   }
   .notmonth, .notmonth a { color: #CCC; }
   .today { background-color: #D7F2FF; }
@@ -36,12 +60,12 @@
 
 
   .start-res{
-    margin-left:50%;
+    margin-left:55%;
     text-decoration: none;
     color: white;
     background-color: #2ECC71;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
     -webkit-border-top-left-radius: 9px;
     -webkit-border-bottom-left-radius: 9px;
     -moz-border-radius-topleft: 9px;
@@ -51,21 +75,54 @@
   }
 
   .booked{
-    text-decoration: none;
-    color: white;
-    background-color: #2ECC71;
-    padding-left: 8px;
-    padding-right: 8px;
     width:100%;
+    height:14px;
+    text-align:center;
+    display:block;
+    // text-decoration: none;
+    // color: white;
+    background-color: #2ECC71;
+    // padding-left: 4px;
+    // padding-right: 4px;
+    
   }
 
-  .end-res{
-    margin-right:50%;
+  .end-res-both{
+    margin-right:7px;
     text-decoration: none;
     color: white;
     background-color: #2ECC71;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 4px;
+    padding-right: 4px;
+    -webkit-border-top-right-radius: 9px;
+    -webkit-border-bottom-right-radius: 9px;
+    -moz-border-radius-topright: 9px;
+    -moz-border-radius-bottomright: 9px;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+  }
+
+  .start-res-both{
+    margin-left:7px;
+    text-decoration: none;
+    color: white;
+    background-color: #2ECC71;
+    padding-left: 4px;
+    padding-right: 4px;
+    -webkit-border-top-left-radius: 9px;
+    -webkit-border-bottom-left-radius: 9px;
+    -moz-border-radius-topleft: 9px;
+    -moz-border-radius-bottomleft: 9px;
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+  }
+  .end-res{
+    margin-right:55%;
+    text-decoration: none;
+    color: white;
+    background-color: #2ECC71;
+    padding-left: 4px;
+    padding-right: 4px;
     -webkit-border-top-right-radius: 9px;
     -webkit-border-bottom-right-radius: 9px;
     -moz-border-radius-topright: 9px;
