--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,12 +1,25 @@
-- provide(:title, 'All companies') 
-%h1 All companies
+- provide(:header, 'All companies') 
 
-/ = will_paginate 
-= link_to "New Company", new_company_path
-%ul.companies
-  - @companies.each do |company| 
-    %li
-      = link_to "#{company.name}", company 
-      = link_to "Delete", company, method: :delete, data: { confirm: "You sure?" }, class: "btn btn-small"
-      = link_to "Edit", edit_company_path(company), class: "btn btn-small"
-/ = will_paginate 
+#content
+  .row
+    .span10.offset1.button-row
+      = link_to "New Company", new_company_path, class: "btn pull-left"
+    .span10.offset1
+      %hr
+
+  .row
+    .span10.offset1
+      %table.table-bordered.table-striped.table.display.dataTables-table
+        %thead
+          %tr
+            %th Name
+            %th Number
+            %th Edit
+            %th Delete
+        %tbody
+          - @companies.each do |company| 
+            %tr
+              %td= link_to company.name, company 
+              %td= company.number
+              %td= link_to "Edit", edit_company_path(company)
+              %td= link_to "Delete", company, method: :delete, data: { confirm: "You sure?" }
