--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -21,7 +21,7 @@
         Existing Company
         %small.pull-right Leave blank if creating a new company
       = f.label :company, "Existing Company"
-      = f.collection_select :company_ids, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
+      = f.collection_select :company_id, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
       %legend 
         New Company
         %small.pull-right Fill in to create a new company
