--- a/app/views/reservations/new.html.haml
+++ b/app/views/reservations/new.html.haml
@@ -12,9 +12,9 @@
       = f.label :customer
       = f.collection_select :customer_ids, Customer.all, :id, :full_name, {include_blank: false}, {class: "chzn-select", :'data-placeholder' => "Select one or more customers", multiple: true}
       = f.label :company
-      = f.collection_select :company_ids, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
+      = f.collection_select :company_id, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
       = f.label :room
-      = f.collection_select :room_ids, Room.all, :id, :name,  {include_blank: false, multiple: true}, {class: "chzn-select", :'data-placeholder' => "Select one or more rooms", multiple: true}
+      = f.collection_select :room_ids, Room.all, :id, :name,  {include_blank: false}, {class: "chzn-select", :'data-placeholder' => "Select one or more rooms", multiple: true}
 
       = f.submit "Create reservation!", class: "btn btn-large btn-primary"
       = link_to "Back", :back, class: "btn btn-large pull-right"
