--- a/app/views/reservations/table.html.haml
+++ b/app/views/reservations/table.html.haml
@@ -15,6 +15,7 @@
       %table.table-bordered.table-striped.table.display.dataTables-table
         %thead
           %tr
+            %th Name
             %th Start Date
             %th End Date
             %th Room
@@ -25,9 +26,10 @@
         %tbody
           - @reservations.each do |reservation| 
             %tr
+              %td= link_to reservation.full_name, reservation
               %td= link_to reservation.start_date.to_s(:rfc822), reservation
               %td= link_to reservation.end_date.to_s(:rfc822), reservation
-              %td= link_to reservation.rooms.first.name, reservation.rooms.first
+              %td= link_to reservation.room.name, reservation.room
               %td= link_to reservation.customers.first.initial_name, reservation.customers.first
               %td
                 - if reservation.company.nil?
