--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -1,6 +1,20 @@
 - provide(:title, @company.name)
-%ul
-  %li= @company.name
-  %li= @company.number
 
-= link_to "Back", :back, class: "btn btn-large"
+.row
+  .span6.offset3
+    .notecard
+      %table.table.table-striped.table-bordered
+        %thead
+          %tr
+            %th.header-icon#briefcase
+              %i.icon-briefcase
+            %th.nameplate{colspan:"3"}= @company.name
+        %tbody
+          %tr
+            %td{style:"width:33%", colspan:"2"}Name
+            %td{colspan:"2"}= @company.name
+          %tr
+            %td{colspan:"2"}Number
+            %td{colspan:"2"}= @company.number       
+
+    = link_to "Back", companies_path, class: "btn btn-large"
