--- a/app/views/reservations/edit.html.haml
+++ b/app/views/reservations/edit.html.haml
@@ -10,11 +10,11 @@
       = f.label :end_date
       = f.text_field :end_date 
       = f.label :company
-      = f.collection_select(:company_ids, Company.all, :id, :name)
+      = f.collection_select :company_id, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
       = f.label :customer
-      = f.collection_select(:customer_ids, Customer.all, :id, :full_name)
+      = f.collection_select :customer_ids, Customer.all, :id, :full_name, {include_blank: false}, {class: "chzn-select", :'data-placeholder' => "Select one or more customers", multiple: true}
       = f.label :room
-      = f.collection_select(:room_ids, Room.all, :id, :name)
+      = f.collection_select :room_id, Room.all, :id, :name,  {include_blank: false}, {class: "chzn-select", :'data-placeholder' => "Select one or more rooms", multiple: false}
 
       = f.submit "Update reservation!", class: "btn btn-large btn-primary"
       = link_to "Back", :back, class: "btn btn-large pull-right"
