--- a/app/views/reservations/new.html.haml
+++ b/app/views/reservations/new.html.haml
@@ -14,7 +14,7 @@
       = f.label :company
       = f.collection_select :company_id, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
       = f.label :room
-      = f.collection_select :room_ids, Room.all, :id, :name,  {include_blank: false}, {class: "chzn-select", :'data-placeholder' => "Select one or more rooms", multiple: true}
+      = f.collection_select :room_id, Room.all, :id, :name,  {include_blank: false}, {class: "chzn-select", :'data-placeholder' => "Select one or more rooms", multiple: false}
 
       = f.submit "Create reservation!", class: "btn btn-large btn-primary"
       = link_to "Back", :back, class: "btn btn-large pull-right"
