--- a/app/views/reservations/show.html.haml
+++ b/app/views/reservations/show.html.haml
@@ -1,12 +1,29 @@
 - provide(:title, "Reservation")
-%ul
-  %li= @reservation.start_date
-  %li= @reservation.end_date
-  - @reservation.customers.each do |customer|
-    %li= customer.full_name
-  - @reservation.rooms.each do |room|
-    %li= room.name
-  - unless @reservation.company.nil?
-    %li= @reservation.company.name
+
+.row
+  .span6.offset3
+    .notecard
+      %table.table.table-striped.table-bordered
+        %thead
+          %tr
+            %th.header-icon#user
+              %i.icon-calendar
+            %th.nameplate{colspan:"3"}= @reservation.full_name
+        %tbody
+          %tr
+            %td{colspan:"2"}Customer
+            %td{colspan:"2"}= link_to @reservation.customers.first.initial_name, @reservation.customers.first
+          %tr
+            %td{colspan:"2"}Room
+            %td{colspan:"2"}= link_to @reservation.room.name, @reservation.room
+          %tr
+            %td{colspan:"2"}Start Date
+            %td{colspan:"2"}= @reservation.start_date.to_s(:rfc822)
+          %tr
+            %td{colspan:"2"}End Date
+            %td{colspan:"2"}= @reservation.end_date.to_s(:rfc822)
+          %tr
+            %td{colspan:"2"}Company
+            %td{colspan:"2"}= @reservation.company.nil? ? "No company" : @reservation.company 
 
 = link_to "Back", :back, class: "btn btn-large"
