--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
  *
  *= require_self
  *= require chosen
- *= require font-awesome
+ *= require _font-awesome
  *= require dataTables/jquery.dataTables
  *= require dataTables/jquery.dataTables.bootstrap
  *= require_tree .
