nested forms working for room and customer

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -18,3 +18,4 @@
             %td{colspan:"2"}= @company.number       
 
     = link_to "Back", companies_path, class: "btn btn-large"
+    = link_to "Edit", edit_company_path, class: "btn btn-large pull-right"
