--- a/app/assets/stylesheets/notecard.css.scss
+++ b/app/assets/stylesheets/notecard.css.scss
@@ -4,6 +4,7 @@
     .nameplate{
     text-align: center;
     font-size: 30px;
+    line-height: 34px;
     vertical-align: middle;
   }
   
@@ -13,10 +14,10 @@
     width:100%;
 
     td, th{
-    text-overflow: ellipsis;
-    max-height: 37px;
-    overflow: hidden;
-    white-space: nowrap;
+    // text-overflow: ellipsis;
+    // max-height: 37px;
+    // overflow: hidden;
+    // white-space: nowrap;
 
     }
   }
