--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,5 +1,6 @@
 - provide(:header, "Creating Customer") 
 
+%h1 New Customer
 .row
   .span6.offset3
     = form_for @customer do |f| 
@@ -24,11 +25,50 @@
       = f.collection_select :company_id, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
       %legend 
         New Company
-        %small.pull-right Fill in to create a new company
-      = label_tag :company_name, "New Company Name"
-      = text_field_tag :company_name
-      = label_tag :company_number, "New Company Number"
-      = text_field_tag :company_number
+        %small.pull-right Fill in if creating a new company
+        =f.fields_for :company do |builder|
+          = builder.label :name, "New Company Name"
+          = builder.text_field :name
+          = builder.label :number, "New Company Number"
+          = builder.text_field :number
 
       = f.submit "Create customer!", class: "btn btn-large btn-primary"
       = link_to "Back", customers_path, class: "btn btn-large pull-right"
+
+
+
+/ - provide(:header, "Creating Customer") 
+
+/ %h1 New Customer
+/ .row
+/   .span6.offset3
+/     = form_for @customer do |f| 
+/       = render 'shared/error_messages', object: f.object
+/       %legend Customer Info
+/       = f.label :first_name 
+/       = f.text_field :first_name 
+/       = f.label :last_name 
+/       = f.text_field :last_name 
+/       = f.label :number, 'DNI/Passport Number'
+/       = f.text_field :number 
+/       = f.label :address_line_1, 'Address'
+/       = f.text_field :address_line_1
+/       = f.label :address_line_2, 'City'
+/       = f.text_field :address_line_2
+/       = f.label :address_line_3, 'Country'
+/       = f.country_select :address_line_3, {}, {class: "chzn-select"}
+/       %legend 
+/         Existing Company
+/         %small.pull-right Leave blank if creating a new company
+/       = f.label :company, "Existing Company"
+/       = f.collection_select :company_id, Company.all, :id, :name, {include_blank: true}, {class: "chzn-select", :'data-placeholder' => "None"}
+/       %legend 
+/         New Company
+/         %small.pull-right Fill in if creating a new company
+/       = label_tag :company_name, "New Company Name"
+/       = text_field_tag :company_name
+/       = label_tag :company_number, "New Company Number"
+/       = text_field_tag :company_number
+
+/       = f.submit "Create customer!", class: "btn btn-large btn-primary"
+/       = link_to "Back", customers_path, class: "btn btn-large pull-right"
