--- a/app/views/layouts/_menubar.html.haml
+++ b/app/views/layouts/_menubar.html.haml
@@ -3,7 +3,7 @@
     %nav
       %ul.nav
         %li{class: "#{'active' if params[:action] == 'quickres'}"}
-          = link_to quickres_path do
+          = link_to "#" do
             %i.icon-star
             Quick Res
         %li{class: "#{'active' if params[:action] == 'daily'}"}
@@ -30,7 +30,7 @@
           = link_to companies_path do
             %i.icon-briefcase
             Companies
-        %li
-          = link_to "#" do
+        %li{class: "#{'active' if params[:controller] == 'services'}"}
+          = link_to services_path do
             %i.icon-food
             Services        
