--- a/app/views/room_types/show.html.haml
+++ b/app/views/room_types/show.html.haml
@@ -20,3 +20,4 @@
        
 
     = link_to "Back", room_types_path, class: "btn btn-large"
+    = link_to "Edit", edit_room_type_path, class: "btn btn-large pull-right"
