--- a/app/assets/stylesheets/long-calendar.css.scss
+++ b/app/assets/stylesheets/long-calendar.css.scss
@@ -60,6 +60,7 @@
 
 
   .start-res{
+    height: 14px;
     margin-left:55%;
     text-decoration: none;
     color: white;
@@ -88,6 +89,7 @@
   }
 
   .end-res-both{
+    height: 14px;
     margin-right:7px;
     text-decoration: none;
     color: white;
@@ -103,6 +105,7 @@
   }
 
   .start-res-both{
+    height: 14px;
     margin-left:7px;
     text-decoration: none;
     color: white;
@@ -117,6 +120,7 @@
     border-bottom-left-radius: 9px;
   }
   .end-res{
+    height: 14px;
     margin-right:55%;
     text-decoration: none;
     color: white;
