edit/delete links added and changed

--- a/app/views/receipts/show.html.haml
+++ b/app/views/receipts/show.html.haml
@@ -48,5 +48,11 @@
                 %td= @receipt.receipt_num
        
 
-    = link_to "Back", receipts_path, class: "btn btn-large"
-    = link_to "Edit", edit_receipt_path, class: "btn btn-large pull-right"
+    
+    = link_to @receipt, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger pull-right" do
+      %i.icon-minus-sign
+      Delete
+    = link_to edit_receipt_path, class: "btn pull-left" do
+      %i.icon-edit
+      Edit
+    
