--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -17,5 +17,9 @@
             %td{colspan:"2"}Number
             %td{colspan:"2"}= @company.number       
 
-    = link_to "Back", companies_path, class: "btn btn-large"
-    = link_to "Edit", edit_company_path, class: "btn btn-large pull-right"
+    = link_to @company, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger pull-right" do
+      %i.icon-minus-sign
+      Delete
+    = link_to edit_company_path, class: "btn pull-left" do
+      %i.icon-edit
+      Edit
