--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -24,5 +24,9 @@
             %td{colspan:"2"}= @customer.company.nil? ? "No company" : (link_to @customer.company.name, @customer.company)
        
 
-    = link_to "Back", customers_path, class: "btn btn-large"
-    = link_to "Edit", edit_customer_path, class: "btn btn-large pull-right"
+    = link_to @customer, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger pull-right" do
+      %i.icon-minus-sign
+      Delete
+    = link_to edit_customer_path, class: "btn pull-left" do
+      %i.icon-edit
+      Edit
