--- a/app/views/room_types/show.html.haml
+++ b/app/views/room_types/show.html.haml
@@ -19,5 +19,9 @@
             %td{colspan:"2"}= @room_type.spaces
        
 
-    = link_to "Back", room_types_path, class: "btn btn-large"
-    = link_to "Edit", edit_room_type_path, class: "btn btn-large pull-right"
+    = link_to @room_type, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger pull-right" do
+      %i.icon-minus-sign
+      Delete
+    = link_to edit_room_type_path, class: "btn pull-left" do
+      %i.icon-edit
+      Edit
