--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -19,5 +19,9 @@
             %td{colspan:"2"}= @service.desc
        
 
-    = link_to "Back", services_path, class: "btn btn-large"
-    = link_to "Edit", edit_service_path, class: "btn btn-large pull-right"
+    = link_to @service, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger pull-right" do
+      %i.icon-minus-sign
+      Delete
+    = link_to edit_service_path, class: "btn pull-left" do
+      %i.icon-edit
+      Edit
